RESOLVED FIXED319492
Don't cache HTTP/network errors in the module map
https://bugs.webkit.org/show_bug.cgi?id=319492
Summary Don't cache HTTP/network errors in the module map
Yoav Weiss
Reported 2026-07-15 05:51:03 PDT
The current spec behavior doesn't allow developers to retry failed module imports, as the failure result (either an HTTP error or a network failure) gets cached. https://github.com/whatwg/html/pull/10327 fixes that. We should implement that behavior change.
Attachments
Yoav Weiss
Comment 1 2026-07-16 06:40:00 PDT
Radar WebKit Bug Importer
Comment 2 2026-07-22 05:51:13 PDT
EWS
Comment 3 2026-08-19 13:23:42 PDT
Committed 319474@main (f324cca020c0): <https://commits.webkit.org/319474@main> Reviewed commits have been landed. Closing PR #69559 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.