Don't cache HTTP/network errors in the module map https://bugs.webkit.org/show_bug.cgi?id=319492

Reviewed by Keith Miller.

This implements the spec changes from https://github.com/whatwg/html/pull/10327 to avoid caching HTTP or network module import failures.

No new tests, but lots of progressions.

* LayoutTests/imported/w3c/web-platform-tests/html/semantics/scripting-1/the-script-element/json-module/repeated-imports.any-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/html/semantics/scripting-1/the-script-element/json-module/repeated-imports.any.sharedworker-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/html/semantics/scripting-1/the-script-element/json-module/repeated-imports.any.worker-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/html/semantics/scripting-1/the-script-element/module/concurrent-failed-imports-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/html/semantics/scripting-1/the-script-element/module/dynamic-import/concurrent-failed-imports.any-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/html/semantics/scripting-1/the-script-element/module/dynamic-import/concurrent-failed-imports.any.sharedworker-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/html/semantics/scripting-1/the-script-element/module/dynamic-import/concurrent-failed-imports.any.worker-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/html/semantics/scripting-1/the-script-element/module/dynamic-import/repeated-imports.any-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/html/semantics/scripting-1/the-script-element/module/dynamic-import/repeated-imports.any.sharedworker-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/html/semantics/scripting-1/the-script-element/module/dynamic-import/repeated-imports.any.worker-expected.txt:
* Source/JavaScriptCore/runtime/JSMicrotask.cpp:
(JSC::moduleLoadTopRejected): Avoid registering failed module loads.
(JSC::moduleLoadStoreError): Avoid registering failed module loads.
(JSC::runInternalMicrotask): Avoid registering failed module loads.
(JSC::moduleLoadTopSettled): Avoid registering failed module loads.
* Source/JavaScriptCore/runtime/JSModuleLoader.cpp:
(JSC::JSModuleLoader::loadModule): Remove failed modules.
(JSC::JSModuleLoader::removeFailedFetchEntry):
* Source/JavaScriptCore/runtime/JSModuleLoader.h:
* LayoutTests/imported/w3c/web-platform-tests/html/semantics/scripting-1/the-script-element/module/instantiation-error-8-expected.txt: Added.

Canonical link: https://commits.webkit.org/319474@main